[package]
name = "rustedrace"
version = "1.0.0"
edition = "2021"
authors = ["Security Researcher"]
description = "A GUI tool for exploring race condition vulnerabilities"

[build-dependencies]
winres = "0.1"

[dependencies]
# GUI Framework
eframe = "0.28"
egui = "0.28"
egui_extras = "0.28"

# HTTP Client
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }

# Parsing and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

# Utilities
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
image = "0.25"
rfd = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
